--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                             <a ui-sref="home">Home</a>
                         </li>
                         <li>
-                            <a ui-sref="pets">Pets</a>
+                            <a ui-sref="pets">Movies</a>
                         </li>
                         <li>
                             <a ui-sref="blog">Blog</a>
                         </li>
                         <li>
-                            <a ui-sref="about">About</a>
+                            <a ui-sref="about">About Me</a>
                         </li>
                     </ul>
 
